# sr-invoice-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
sr_invoice_parser/: __init__.py  decorators.py  exceptions.py  parser.py
tests/: example_response.html  test_parser.py
