[build-system]
requires = ["flit_core>=3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "sr-invoice-parser"
dynamic = ["version", "description"]
authors = [
  { name="Innovigo", email="hello@innovigo.co" },
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.8"
dependencies = [
  "pytz>=2021.1",
  "requests>=2.21.0",
  "parsel>=1.7.0",
  "srtools>=0.1.13",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://github.com/Innovigo/sr-invoice-parser"
Source = "https://github.com/Innovigo/sr-invoice-parser"
Issues = "https://github.com/Innovigo/sr-invoice-parser/issues"
